force-app/main/default/objects/Visit/fields/AI_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Processing_Status__c</fullName>
    <description>Status of AI narrative and ranking generation</description>
    <inlineHelpText>Tracks the AI processing workflow: Not Started, Processing, Complete, or Error.</inlineHelpText>
    <label>AI Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>