force-app/main/default/objects/Visit/fields/Ambulation_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Evidence__c</fullName>
    <description>Supporting evidence and citations for Ambulation ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Ambulation - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>