force-app/main/default/objects/Visit/fields/Ambulation_Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambulation Is Exception</label>
    <type>Checkbox</type>
</CustomField>