force-app/main/default/objects/Visit/fields/Ambulation_Justification__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Justification__c</fullName>
    <label>Ambulation Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>