force-app/main/default/objects/Visit/fields/Ambulation_Proposed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Proposed_Hours__c</fullName>
    <label>Ambulation Proposed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>