force-app/main/default/objects/Visit/fields/Ambulation_Proposed_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Proposed_Ranking__c</fullName>
    <description>AI-proposed ranking for Ambulation need category</description>
    <inlineHelpText>Ranking proposed by AI based on field observations. Worker can accept or override.</inlineHelpText>
    <label>Ambulation - Proposed Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rank 1</fullName>
            </value>
            <value>
                <fullName>Rank 2</fullName>
            </value>
            <value>
                <fullName>Rank 3</fullName>
            </value>
            <value>
                <fullName>Rank 4</fullName>
            </value>
            <value>
                <fullName>Rank 5</fullName>
            </value>
            <value>
                <fullName>Rank 6</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>