force-app/main/default/objects/Visit/fields/Ambulation_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Ambulation_Rationale__c</fullName>
    <description>Plain-language explanation for Ambulation ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Ambulation - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>