force-app/main/default/objects/Visit/fields/Domestic_Services_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Services_Evidence__c</fullName>
    <description>Supporting evidence and citations for Domestic Services ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Domestic Services - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>