force-app/main/default/objects/Visit/fields/Domestic_Services_Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Services_Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Services Is Exception</label>
    <type>Checkbox</type>
</CustomField>