force-app/main/default/objects/Visit/fields/Domestic_Services_Justification__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Services_Justification__c</fullName>
    <label>Domestic Services Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>