force-app/main/default/objects/Visit/fields/Domestic_Services_Proposed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Services_Proposed_Hours__c</fullName>
    <label>Domestic Services Proposed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>