force-app/main/default/objects/Visit/fields/Domestic_Services_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Services_Rationale__c</fullName>
    <description>Plain-language explanation for Domestic Services ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Domestic Services - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>