force-app/main/default/objects/Visit/fields/Draft_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Draft_Narrative__c</fullName>
    <description>AI-generated draft narrative from field observations</description>
    <label>Draft Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>