force-app/main/default/objects/Visit/fields/Final_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Final_Narrative__c</fullName>
    <description>Worker-approved final narrative for submission</description>
    <inlineHelpText>This narrative is locked after approval and becomes the official assessment record.</inlineHelpText>
    <label>Final Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>