force-app/main/default/objects/Visit/fields/Highest_Need_Category__c.field-meta.xml
<CustomField>
    <fullName>Highest_Need_Category__c</fullName>
    <description>Category with the highest ranking score</description>
    <inlineHelpText>The need category that received the highest ranking during assessment.</inlineHelpText>
    <label>Highest Need Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>