force-app/main/default/objects/Visit/fields/Judgment_Approved_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Approved_Ranking__c</fullName>
    <description>Worker-approved final ranking for Judgment need category</description>
    <inlineHelpText>Final ranking approved by the caseworker. May differ from proposed ranking.</inlineHelpText>
    <label>Judgment - Approved Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rank 1</fullName>
            </value>
            <value>
                <fullName>Rank 2</fullName>
            </value>
            <value>
                <fullName>Rank 3</fullName>
            </value>
            <value>
                <fullName>Rank 4</fullName>
            </value>
            <value>
                <fullName>Rank 5</fullName>
            </value>
            <value>
                <fullName>Rank 6</fullName>
            </value>
            <value>
                <fullName>Not Ranked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>