force-app/main/default/objects/Visit/fields/Judgment_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Evidence__c</fullName>
    <description>Supporting evidence and citations for Judgment ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Judgment - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>