force-app/main/default/objects/Visit/fields/Judgment_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Rationale__c</fullName>
    <description>Plain-language explanation for Judgment ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Judgment - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>