force-app/main/default/objects/Visit/fields/Meal_Preparation_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preparation_Evidence__c</fullName>
    <description>Supporting evidence and citations for Meal Preparation ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Meal Preparation - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>