force-app/main/default/objects/Visit/fields/Meal_Preparation_Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preparation_Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meal Preparation Is Exception</label>
    <type>Checkbox</type>
</CustomField>