force-app/main/default/objects/Visit/fields/Meal_Preparation_Justification__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preparation_Justification__c</fullName>
    <label>Meal Preparation Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>