force-app/main/default/objects/Visit/fields/Meal_Preparation_Proposed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preparation_Proposed_Hours__c</fullName>
    <label>Meal Preparation Proposed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>