force-app/main/default/objects/Visit/fields/Meal_Preparation_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preparation_Rationale__c</fullName>
    <description>Plain-language explanation for Meal Preparation ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Meal Preparation - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>