force-app/main/default/objects/Visit/fields/Memory_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Memory_Evidence__c</fullName>
    <description>Supporting evidence and citations for Memory ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Memory - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>