force-app/main/default/objects/Visit/fields/Memory_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Memory_Rationale__c</fullName>
    <description>Plain-language explanation for Memory ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Memory - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>