force-app/main/default/objects/Visit/fields/Narrative_Status__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Status__c</fullName>
    <description>Current status of the assessment narrative</description>
    <inlineHelpText>Tracks the narrative through draft, review, and approval stages.</inlineHelpText>
    <label>Narrative Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>