force-app/main/default/objects/Visit/fields/Orientation_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Evidence__c</fullName>
    <description>Supporting evidence and citations for Orientation ranking</description>
    <inlineHelpText>Specific observations that support the ranking for this category.</inlineHelpText>
    <label>Orientation - Evidence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>