force-app/main/default/objects/Visit/fields/Orientation_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Rationale__c</fullName>
    <description>Plain-language explanation for Orientation ranking</description>
    <inlineHelpText>AI-generated explanation of why this ranking was assigned.</inlineHelpText>
    <label>Orientation - Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>