force-app/main/default/objects/Visit/fields/Overall_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk_Level__c</fullName>
    <description>Overall risk level determined from assessment</description>
    <inlineHelpText>High, Medium, or Low risk level based on all needs categories.</inlineHelpText>
    <label>Overall Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>