force-app/main/default/objects/Visit/fields/Place_Address__c.field-meta.xml
<CustomField>
    <fullName>Place_Address__c</fullName>
    <formula>IF(
  ISBLANK(Place.Street),
  "",
  Place.Street &amp; BR() &amp;
  IF(
    ISBLANK(Place.City),
    "",
    Place.City &amp; ", "
  ) &amp;
  IF(
    ISBLANK(Place.State),
    "",
    Place.State &amp; " "
  ) &amp;
  IF(
    ISBLANK(Place.PostalCode),
    "",
    Place.PostalCode
  ) &amp;
  IF(
    ISBLANK(Place.Country),
    "",
    BR() &amp; Place.Country
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place Address</label>
    <type>Text</type>
</CustomField>