force-app/main/default/objects/Visit/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Review and approval status of the assessment</description>
    <inlineHelpText>Tracks whether the assessment has been reviewed and approved by the worker.</inlineHelpText>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worker Reviewed</fullName>
            </value>
            <value>
                <fullName>Submitted to Supervisor</fullName>
            </value>
            <value>
                <fullName>Supervisor Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>