force-app/main/default/objects/Visit/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who reviewed and approved the assessment</description>
    <inlineHelpText>The caseworker or supervisor who reviewed this assessment.</inlineHelpText>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>