force-app/main/default/objects/Visit/fields/Submitted_For_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For_Review_Date__c</fullName>
    <description>Date and time when the assessment was submitted for review</description>
    <inlineHelpText>Automatically populated when the worker submits the assessment.</inlineHelpText>
    <label>Submitted for Review Date</label>
    <type>DateTime</type>
</CustomField>