force-app/main/default/objects/Visit/fields/Visit_Notes_Dictation__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes_Dictation__c</fullName>
    <label>Visit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>