force-app/main/default/objects/Visit/fields/Worker_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Worker_Approval_Date__c</fullName>
    <description>Date and time when the worker approved the final narrative and rankings</description>
    <inlineHelpText>Automatically populated when the worker approves the assessment.</inlineHelpText>
    <label>Worker Approval Date</label>
    <type>DateTime</type>
</CustomField>